<resources>
    <string name="app_name">啪啪江湖</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="common_next_step">下一步</string>
    <string name="common_edit">编辑</string>
    <string name="common_man">男</string>
    <string name="common_woman">女</string>
    <string name="common_setting">设置</string>
    <string name="common_time">时间</string>
    <string name="common_position">地点</string>
    <string name="login_login">登陆</string>
    <string name="verification_code">获取验证码</string>
    <string name="telephone_or_papa_number">手机号/啪啪号</string>
    <string name="password">密码</string>
    <string name="find_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="input_telephone">请输入您的手机号</string>
    <string name="input_note_verification_code">请输入6位您的短信验证码</string>
    <string name="input_password">请输入您的密码</string>
    <string name="input_password_again">请再次输入您的密码</string>
    <string name="read_user_agreement">已阅读并同意《用户协议》</string>
    <string name="mobile_register">手机注册</string>
    <string name="register_success">注册成功</string>
    <string name="sms_sending">短信发送中</string>
    <string name="user_upload_icon">上传头像</string>
    <string name="user_papa_number">啪啪号:</string>
    <string name="user_nickname">昵称</string>
    <string name="user_nickname2">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_sex_default">男</string>
    <string name="user_birthday">出生年月</string>
    <string name="user_birthday_default">1990-01-01</string>
    <string name="user_address">所在地</string>
    <string name="user_address_default">广东-深圳-南山</string>
    <string name="user_basic_information">基本资料</string>
    <string name="user_birthday2">出生日期</string>
    <string name="user_area">地区</string>
    <string name="user_personal_signature">个性签名</string>
    <string name="user_other_information">其他资料</string>
    <string name="user_occupation">职业</string>
    <string name="user_company">公司</string>
    <string name="user_school">学校</string>
    <string name="user_email">邮箱</string>
    <string name="user_submit">提交</string>
    <string name="user_head">头像</string>
    <string name="mine">我的</string>
    <string name="mine_papa_num">邮箱</string>
    <string name="mine_vitality_point">活力积分</string>
    <string name="mine_military">战绩积分</string>
    <string name="mine_invitation">我发起的</string>
    <string name="mine_join">邀请我的</string>
    <string name="user_unwrite">未填写</string>
    <string name="mine_default_level">LV15</string>
    <string name="how_to_get">如何获得?</string>
    <string name="setting">设置</string>
    <string name="setting_update_password">修改密码</string>
    <string name="setting_remind_setting">提醒设置</string>
    <string name="setting_update_new_version">检查新版本</string>
    <string name="setting_opinion_feedback">意见反馈</string>
    <string name="setting_user_agreement">用户协议</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_about_papa">关于啪啪</string>
    <string name="setting_logout">退出登陆</string>
    <string name="setting_logout_confirm">确定退出？</string>
    <string name="input_new_password">请输入您的新密码</string>
    <string name="input_new_password_again">请再次输入您的新密码</string>
    <string name="show_password">显示密码</string>
    <string name="complete">完成</string>
    <string name="remind_accept_message">接收消息</string>
    <string name="remind_voice">声音</string>
    <string name="remind_vibration">震动</string>
    <string name="remind_no_disturbing">免打扰设置</string>
    <string name="remind_hint">温馨提示:\n1、接收消息-关闭将屏蔽除系统消息之外的私信\n2、声音-控制消息声音提示\n3、震动-控制消息震动提示\n4、免打扰设置-开启后，2点-7点将自动关闭声音及震动</string>
    <string name="feedback_title">请输入反馈标题</string>
    <string name="feedback_content">请提出您的宝贵意见或建议，啪啪的成长离不开您的支持，我们将抽取一些用户给予适当的奖励！</string>
    <string name="space_constraints">您输入的字数超过了限制！</string>
    <string name="about_papa">深圳市啪啪运动文化传播公司成立于2014年9月，致力于推广国内的体育事业发展，传播体育健康文化，推动全民运动风潮，成立以来，啪啪运动公司一直秉承一切以用户价值为依归的经营理念，始终处于稳健、高速发展的状态。目前公司主要产品有体育竞技类APP、体育资讯网站以及相关增值产品。</string>
    <string name="user_agreement">首部及导言\n
请仔细阅读本协议，啪啪江湖APP软件将依据以下条件和条款为您提供服务。\n
欢迎阅读啪啪江湖APP软件用户协议(下称“本协议”)。本协议阐述之条款和条件适用于您使用啪啪江湖APP软件所提供的各种工具和服务(下称“服务”)\n
1．服务条款的确认\n
啪啪江湖APP软件根据本服务条款及对该条款的修改向用户提供服务。本服务条款具有合同法上的法律效力。\n
如果您对协议的任何条款表示异议，您可以选择不注册，一旦您点选“注册”并通过注册程序，即表示您自愿接受本协议之所有条款，并已成为啪啪江湖APP软件的注册会员。用户在使用啪啪江湖APP软件的同时，同意接受啪啪江湖APP软件会员服务提供的各类信息服务。\n
2．服务内容及修改、中断、终止\n
2.1 啪啪江湖APP软件服务的具体内容由本平台根据实际情况提供，并对所提供之服务拥有最终解释权。\n
2.2 啪啪江湖APP软件仅向其会员提供相关服务，与相关服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均由会员自行负担。\n
2.3 鉴于网络服务的特殊性，用户同意啪啪江湖APP软件有权不经事先通知，随时变更、中断或终止部分或全部的网络服务（包括收费网络服务）。啪啪江湖APP软件不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。\n
2.4 啪啪江湖APP软件需要定期或不定期地对提供网络服务的平台或相关的设备进行检修或者维护，如因此类情况而造成网络服务（包括收费网络服务）在合理时间内的中断，啪啪江湖APP软件无需为此承担任何责任。啪啪江湖APP软件保留不经事先通知为维修保养、升级或其它目的暂停全部或部分的网络服务的权利。\n
2.5 用户明确同意其使用啪啪江湖APP软件网络服务所存在的风险将完全由其自己承担。用户理解并接受下载或通过啪啪江湖APP软件服务而链接及得到的资讯、产品及服务均系啪啪江湖APP软件自动搜录，啪啪江湖APP软件对其合法性概不负责，亦不承担任何法律责任，用户自行承担风险，啪啪江湖APP软件不做任何形式的保证，不保证搜索结果满足用户的要求，不保证搜索服务不中断，对搜索结果的安全性、正确性、及时性、合法性均不做担保。\n
2.6 啪啪江湖APP软件对超过6个月未登录使用的帐号，保留关闭的权利。\n
2.7 啪啪江湖APP软件有权于任何时间暂时或永久修改或终止本服务（或其任何部分），而无论其通知与否，啪啪江湖APP软件对用户和任何第三人均无需承担任何责任。\n
2.8 您同意啪啪江湖APP软件得基于其自行之考虑，因任何理由，包含但不限于长时间未使用，或啪啪江湖APP软件认为您已经违反本服务协议的文字及精神，终止您的密码、帐号或本服务之使用（或服务之任何部分），并将您在本服务内任何内容加以移除并删除。您同意依本服务协议任何规定提供之服务，无需进行事先通知即可中断或终止，您承认并同意，啪啪江湖APP软件可立即关闭或删除您的帐号及您帐号中所有相关信息及文件，或禁止继续使用前述文件或本服务。\n
此外，您同意若本服务之使用被中断或终止或您的帐号及相关信息和文件被关闭或删除，啪啪江湖APP软件对您或任何第三人均不承担任何责任。\n
3．会员帐号及密码\n
用户注册会员成功后，啪啪江湖APP软件将给予每个会员一个帐号及相应的密码，该帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。\n
因黑客行为或会员保管疏忽致使帐号、密码被他人非法使用的，本公司不承担任何责任。如您发现任何非法使用会员帐号或安全漏洞的情况，请立即与本公司联系。\n
4. 注册信息和隐私保护\n
4.1 啪啪江湖APP软件（即啪啪江湖APP软件用户ID）的所有权归啪啪江湖APP软件，用户完成注册申请手续后，获得啪啪江湖APP软件帐号的使用权。用户应提供及时、详尽及准确的个人资料，并不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将作为注册资料。如果因用户注册信息不真实而引起的问题及其产生的后果，啪啪江湖APP软件不负任何责任。\n
4.2 用户不得将其帐号、密码转让或出借予他人使用。如发现其帐号遭他人非法使用，应立即通知啪啪江湖APP软件。\n
4.3 啪啪江湖APP软件不对外公开或向第三方提供单个用户的注册资料，除非：\n
• 事先获得用户的明确授权；\n
• 只有透露你的个人资料，才能提供你所要求的产品和服务；\n
• 根据有关的法律法规要求；\n
• 按照相关政府主管部门的要求；\n
• 为维护啪啪江湖APP软件的合法权益。\n
4.4 在您注册啪啪江湖APP软件帐户，使用啪啪江湖APP软件产品或服务，或访问啪啪江湖APP软件网页时，啪啪江湖APP软件会收集您的个人身份识别资料，并会将这些资料用于：改进为您提供的服务及网页内容。\n
5. 用户权责\n
5.1符合下列条件之一的个人、组织，才能申请成为啪啪江湖APP软件用户、使用本协议项下的服务：\n
5.1.1 年满十八周岁，并具有民事权利能力和民事行为能力的自然人；\n
5.1.2 未满十八周岁，但监护人（包括但不仅限于父母）予以书面同意的自然人；\n
5.1.3 根据中国法律、法规成立并合法存在的公司等企业法人、事业单位、社团组织和其他组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不当注册为用户的，其与本公司之间的协议自始无效，本公司一经发现，有权立即注销该用户。\n
5.2 用户有权按照啪啪江湖APP软件规定的程序和要求使用啪啪江湖APP软件向会员提供的各项网络服务，如果会员对该服务有异议，可以与啪啪江湖APP软件联系以便得到及时解决。\n
5.3 用户在申请使用啪啪江湖APP软件网络服务时，必须向啪啪江湖APP软件提供准确的个人资料，如个人资料有任何变动，必须及时更新。\n
5.4 用户须同意接受啪啪江湖APP软件通过电子邮件或其他方式向会员发送相关商业信息。\n
5.5 用户在使用啪啪江湖APP软件服务时，必须遵守中华人民共和国相关法律法规的规定，不得利用本服务进行任何违法或不正当的活动，包括但不限于下列行为∶\n
5.5.1 制作、复制、发布、传播或以其它方式传送含有下列内容之一的信息：\n
•反对宪法所确定的基本原则的\n
•危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n
•损害国家荣誉和利益的；\n
•煽动民族仇恨、民族歧视、破坏民族团结的；\n
•破坏国家宗教政策，宣扬邪教和封建迷信的；\n
•散布谣言，扰乱社会秩序，破坏社会稳定的；\n
•散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；\n
•侮辱或者诽谤他人，侵害他人合法权利的；\n
•煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；\n
•以非法民间组织名义活动的；\n
•含有虚假、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；\n
•含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的。\n
5.5.2 不得利用啪啪江湖APP软件服务从事以下活动：\n
•未经允许，进入计算机信息网络或者使用计算机信息网络资源；\n
•未经允许，对计算机信息网络功能进行删除、修改或者增加；\n
•未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加；\n
•故意制作、传播计算机病毒等破坏性程序；\n
•其他危害计算机信息网络安全的行为。\n
5.6 用户违反本协议或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，您同意赔偿啪啪江湖APP软件与合作公司、关联公司，并使之免受损害。对此，啪啪江湖APP软件有权视用户的行为性质，采取包括但不限于删除用户发布信息内容、暂停使用许可、终止服务、限制使用、回收啪啪江湖APP软件帐号、追究法律责任等措施。对恶意注册啪啪江湖APP软件帐号或利用啪啪江湖APP软件帐号进行违法活动、捣乱、骚扰、欺骗、其他用户以及其他违反本协议的行为，啪啪江湖APP软件有权回收其帐号。同时，本公司会视司法部门的要求，协助调查。\n
5.7 用户不得对啪啪江湖APP软件任何部分通过任何方式进行复制、拷贝、出售、转售或用于任何其它商业目的。\n
5.8 用户须对自己在使用啪啪江湖APP软件服务过程中的行为承担法律责任。用户承担法律责任的形式包括但不限于：对受到侵害者进行赔偿，以及在啪啪江湖APP软件运营公司首先承担了因用户行为导致的行政处罚或侵权损害赔偿责任后，用户应给予啪啪江湖APP软件运营公司等额的赔偿。\n
6. 知识产权\n
6.1 啪啪江湖APP软件网站及网站所使用的任何相关软件、程序、内容，包括但不限于作品、图片、档案、资料、网站构架、网站版面的安排、网页设计、经由本网站或广告商向用户呈现的广告或资讯，均由本公司或其它权利人依法享有相应的知识产权，包括但不限于著作权、商标权、专利权或其它专属权利等，受到相关法律的保护。未经本公司或权利人明示授权，用户保证不修改、出租、出借、出售、散布本网站及本网站所使用的上述任何资料和资源，或根据上述资料和资源制作成任何种类物品。\n
6.2 本公司授予用户不可转移及非专属的使用权，使用户可以通过单机计算机使用本网站的目标代码（以下简称“软件”），但用户不得且不得允许任何第三方，复制、修改、创作衍生作品、进行还原工程、反向组译，或以其它方式破译或试图破译源代码，或出售、转让“软件”或对“软件”进行再授权，或以其它方式移转“软件”之任何权利。用户同意不以任何方式修改“软件”，或使用修改后的“软件”。\n
6.3 啪啪江湖APP软件有权在所有由平台提供的功能界面标注“此功能由啪啪江湖APP软件提供”等相关版权信息。。\n
6.4 用户不得经由非啪啪江湖APP软件所提供的界面使用本网站。\n
7. 其他\n
7.1 因不可抗力或者其他意外事件，使得本协议的履行不可能、不必要或者无意义的，双方均不承担责任。本协议所称之不可抗力意指不能预见、不能避免并不能克服的客观情况，包括但不限于战争、台风、水灾、火灾、雷击或地震、罢工、暴动、法定疾病、黑客攻击、网络病毒、电信部门技术管制、政府行为或任何其它自然或人为造成的灾难等客观情况。\n
7.2 本条款及其修订本的有效性、履行和与本条款及其修订本效力有关的所有事宜，将受中华人民共和国法律约束，任何争议仅适用中华人民共和国法律。\n
7.3 因本条款所引起的用户与本公司的任何纠纷或争议，首先应友好协商解决，协商不成的，用户在此同意将纠纷或争议提交本公司住所地有管辖权的人民法院诉讼解决。\n
7.4用户正确提交注册程序所需的资料并确认本协议后，本协议在啪啪江湖APP软件与用户之间成立并生效。\n
7.5本协议生效前的注册用户只需要使用原用户名及密码登录啪啪江湖APP软件网站重新接受并确认本协议，即可继续使用啪啪江湖APP软件的服务。\n
7.6协议有效期：从用户同意本协议或使用啪啪江湖APP软件起至用户注销啪啪江湖APP软件服务止。\n
7.7本协议如无特殊规定，双方应当使用电子邮件方式就本协议相关事项进行联系。\n
7.8啪啪江湖APP软件各相关部门的电子邮箱以在啪啪江湖APP软件官方网站上注明的为准。\n
7.9使用啪啪江湖APP软件即表示接受啪啪江湖APP软件服务协议及其所有附件。\n
7.10本协议的最终解释权归啪啪江湖APP软件所有。\n
    </string>
    <string name="add_friends">添加好友</string>
    <string name="chating">聊天</string>
    <string name="invatation">邀请比赛</string>
    <string name="ranking">排名：</string>
    <string name="current_combat">近期战绩</string>
    <string name="competition_theme">赛事主题</string>
    <string name="competition_theme2">约赛主题</string>
    <string name="input_competition_theme">请输入赛事主题</string>
    <string name="input_competition_illustration">请输入赛事说明</string>
    <string name="competition_item">约赛项目</string>
    <string name="competition_fee">费用</string>
    <string name="competition_illustration">说明</string>
    <string name="invitation_point">愿押付的积分</string>
    <string name="invitation_point_least15">愿花费的活力(至少15个活力)</string>
    <string name="input_invitation_point">请输入你愿意花费的活力</string>
    <string name="available_point">可用的活力积分</string>
    <string name="tips">提示：</string>
    <string name="publish">邀请</string>
    <string name="competition_tips1">1、押付的积分越多，越能展现自己的诚意，对方接受率也就越高，约赛成功后回报也越高。</string>
    <string name="competition_tips2">2、发布的邀约若无人接受，约会过后花费的活力全部返还。</string>
    <string name="win">胜</string>
    <string name="dogfall">平</string>
    <string name="lose">负</string>
    <string name="ranking2">排名</string>
    <string name="combat_history">战绩</string>
    <string name="challenge">挑战</string>
    <string name="submit">提交</string>
    <string name="accept">接受</string>
    <string name="camera">相机</string>
    <string name="select_fee">选择费用</string>
    <string name="competition_invitation">邀请：</string>
    <string name="competition_item2">项目：</string>
    <string name="competition_time">时间：</string>
    <string name="no_ranking">约赛都没点过,还想要排名</string>
    <string name="no_city">加载城市数据中...</string>
    <string name="share_qq">分享至QQ空间</string>
    <string name="share_we_chat">分享之朋友圈</string>
    <string name="share_sina">分享至新浪微博</string>
    <string name="share_tips">分享有礼,分享即可获得啪啪排名积分</string>
    <string name="news">消息</string>
    <string name="school">学校</string>
    <string name="news_contacts">联系人</string>
    <string name="news_my_friends">我的好友</string>
    <string name="news_invitation">邀请</string>
    <string name="news_added">已添加</string>
    <string name="news_add">添加</string>
    <string name="news_add_friends">添加为好友</string>
    <string name="news_search_friends_details">详细资料</string>
    <string name="news_offcial_assistant">官方助手</string>
    <string name="news_about_match">约赛</string>
    <string name="news_about_match_news">约赛消息</string>
    <string name="news_new_friends">新的朋友</string>
    <string name="news_new_friends_added">已接受</string>
    <string name="news_request_add_friends">请求添加为好友</string>
    <string name="send_message">发送消息</string>
    <string name="drop_down_refresh">下拉刷新</string>
    <string name="loading_in">正在载入......</string>
    <string name="let_go_refresh">放开刷新...</string>
    <string name="hold_down_talk">按住说话</string>
    <string name="loose_end_talk">松开结束说话</string>
    <string name="join_aboutmatch">暂无约赛消息,快去邀请朋友一起玩耍吧</string>
    <string name="current_vitality">当前活力</string>
</resources>