<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_backgroud"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <EditText
        android:id="@+id/update_password_password"
        style="@style/Login_EditText"
        android:layout_marginTop="@dimen/px_20"
        android:hint="@string/input_password"
          android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/update_password_new_password1"
        style="@style/Login_EditText"
        android:layout_marginTop="@dimen/px_20"
          android:inputType="textPassword"
        android:hint="@string/input_new_password"
        android:singleLine="true" />

    <EditText
        android:id="@+id/update_password_new_password2"
        style="@style/Login_EditText"
        android:layout_marginTop="@dimen/px_20"
        android:hint="@string/input_new_password_again"
        android:inputType="textPassword"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_70"
        android:layout_marginTop="@dimen/px_40"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/update_password_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/regist_read_unselect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/px_10"
            android:text="@string/show_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

</LinearLayout>